--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 p {
-    color: whitesmoke;
+    color: #2e2e28;
 }
 
 body{
@@ -9,22 +9,18 @@ body{
 }
 
 div {
-    width: 70%;
-    background-color: #ebc334;
+    width: 90%;
+    float: center; 
+    background-color: #f5f2b8;
+    margin: auto;
     text-align: center;
 }
 
 
 
-#nextpage {
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-
 
 H1 {
-    color: whitesmoke; 
+    color:#2e2e28; 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center; 
 }
@@ -33,39 +29,56 @@ img {
     opacity: 90%;
 }
 
-table {
-    text-align: center;
-    color: whitesmoke;
-    padding-top: 30px;
-    padding-bottom: 30px;
+
+
+#table {
+    padding-top: 20px;
+    
+}
+
+
+table,td,th {
+    border: 1px solid #2e2e28;
+    width: 20%;
+    text-align: left;
+    color: #2e2e28;
+  
     margin-left: auto;
     margin-right: auto;
     font-size: 16px;
 }
 
+th,td {
+    padding: 5px;
+}
+
 h3 {
-    color: whitesmoke; 
+    color:#2e2e28; 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center; 
 }
 
 ul { 
-    text-align: center;
-    color: whitesmoke;
-    list-style-position: inside;
+    
+    color: #2e2e28;
+    list-style-position: outside;
     display: inline-block;
-    padding-left: 10%;
+    padding-left: 20px;
 
     
 
 }
 
 h2 {
-    color: whitesmoke; 
+    color: #2e2e28; 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center; 
 }
 
 
+#nextpage {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 
 
