--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ p {
     color: #2e2e28;
 }
 
+p.quote {
+    font-size: 30px;
+    color: #2e2e28;
+}
+
 body{
     background: #deb423;
     
@@ -10,16 +15,15 @@ body{
 
 div {
     width: 90%;
-    float: center; 
+   margin: 0 auto;
     background-color: #f5f2b8;
-    margin: auto;
+    padding: 10px;
     text-align: center;
 }
 
 
 
-
-H1 {
+h1 {
     color:#2e2e28; 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center; 
@@ -31,10 +35,6 @@ img {
 
 
 
-#table {
-    padding-top: 20px;
-    
-}
 
 
 table,td,th {
