--- a/style.css
+++ b/style.css
@@ -8,27 +8,32 @@ p.quote {
 }
 
 body{
-    background-image: url("vintagepatterns.png");
+    background-image: url("vintage.jpg");
+    background-color: khaki;
 }
 
 div {
-    width: 90%;
+    width: 75%;
    margin: 0 auto;
     background-color: #f5f2b8;
     padding: 10px;
     text-align: center;
+    opacity: 0.95;
 }
 
 
 
 h1 {
-    color:#2e2e28; 
+    color:#f5f2b8; 
+    font-size: 50px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center; 
+    background-color: #d48817;
+    
 }
 
 img {
-    opacity: 90%;
+    opacity: 95%;
 }
 
 
